--- a/package.json
+++ b/package.json
@@ -60,17 +60,22 @@
     "@ant-design/pro-layout": "^4.8.3",
     "@antv/data-set": "^0.10.2",
     "antd": "^3.23.6",
+    "bizcharts": "^3.5.6",
+    "bizcharts-plugin-slider": "^2.1.1-beta.1",
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "numeral": "^2.0.6",
     "omit.js": "^1.0.2",
     "path-to-regexp": "2.4.0",
     "qs": "^6.9.0",
     "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
+    "react-fittext": "^1.0.0",
     "react-helmet": "^5.2.1",
+    "react-router": "^4.3.1",
     "redux": "^4.0.1",
     "umi": "^2.8.7",
     "umi-plugin-antd-theme": "^1.0.1",
