--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   ],
   "dependencies": {
     "@ant-design/pro-layout": "^4.8.3",
+    "@ant-design/pro-table": "^1.0.31",
     "@antv/data-set": "^0.10.2",
     "antd": "^3.23.6",
     "bizcharts": "^3.5.6",
